--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+#options {
+    border-style: solid;
+    border-width: 0.1em;
+    padding: 5px 30px 5px 5px;
+    width: fit-content;
+}
+
 #grid-container {
     display: flex;
     flex-wrap: wrap;
-    border-width: 0.1em;
+    border-width: 0.2em;
     border-style: solid;
     width: 500px;
     height: 500px;
